# kinova-ros

./: README.md  README_new.md  README_original.md  test.txt
kinova_camera/: CMakeLists.txt  package.xml
kinova_camera/config/: calibration-back.yaml  calibration.yaml  intrinsic_calibration.yaml
kinova_camera/launch/: extrinsic_calibration.launch
kinova_camera/src/: calibrator.py
kinova_control/: CMakeLists.txt
kinova_control/src/: mimic_kinect.py  mimic_openpose_kinect.py  move_robot.py  move_robot_test.py  robot_pose_pic.py  robot_skeleton.py
kinova_control/src/utils/: message_commander.py  move_queue.py
kinova_demo/: CMakeLists.txt  README.md
kinova_demo/nodes/kinova_demo/: testActionSvr.py  testPath.py
kinova_description/meshes/markers/: 4x4_1.dae  4x4_98.dae
kinova_description/meshes/objects/: README.md
kinova_description/urdf/: arm_camera.xacro  arm_on_table.xacro
kinova_description/urdf/markers/: marker_4x4_1.xacro  marker_4x4_98.xacro
kinova_description/urdf/objects/: README.md  arm_stand.xacro  table.xacro
kinova_gazebo/launch/: robot_camera.launch  robot_table.launch
kinova_moveit/kinova_arm_moveit_demo/include/: pick_place.h
kinova_moveit/kinova_arm_moveit_demo/src/: pick_place.cpp
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: moveit.rviz
record/: camera_cal.bag  positions.txt
